--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "^4.21.2",
     "firebase": "^11.1.0",
     "leetcode-calendar": "^1.0.1",
+    "lucide-react": "^0.469.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
