--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.9",
+    "chart.js": "^4.4.7",
     "cheerio": "^1.0.0",
     "express": "^4.21.2",
     "firebase": "^11.1.0",
@@ -14,6 +15,8 @@
     "lucide-react": "^0.469.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-calendar-heatmap": "^1.9.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-feather": "^2.0.10",
     "react-icons": "^5.4.0",
