--- a/package.json
+++ b/package.json
@@ -3,23 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.9",
-    "chart.js": "^4.4.7",
-    "cheerio": "^1.0.0",
-    "express": "^4.21.2",
     "firebase": "^11.1.0",
     "leetcode-calendar": "^1.0.1",
     "lucide-react": "^0.469.0",
-    "moment": "^2.30.1",
     "react": "^18.3.1",
-    "react-calendar-heatmap": "^1.9.0",
-    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
-    "react-feather": "^2.0.10",
-    "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.2",
@@ -56,8 +45,6 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.16"
+    "eslint-config-react-app": "^7.0.1"
   }
 }
